Sync all content

--- a/content/resources/14127mtfrlc10pt1.md
+++ b/content/resources/14127mtfrlc10pt1.md
@@ -4,6 +4,7 @@ description: Slides for presentation courtesy of David Laibson, Andrea Repetto, 
   Jeremy Tobacman. Used with permission.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/56c087eecb968f2c4734beb9078e2aa4_14127mtfrlc10pt1.pdf
 file_type: application/pdf
+parent_uid: 1075859e-4cef-e748-703e-ab5bb16b1e24
 resourcetype: Document
 title: 14127mtfrlc10pt1.pdf
 uid: 56c087ee-cb96-8f2c-4734-beb9078e2aa4
