--- a/content/resources/127hand1.md
+++ b/content/resources/127hand1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This handout contains charts and graphs associated with Lecture 12.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/8c402690261fdfd13f6065918d1f96ec_127hand1.pdf
 file_type: application/pdf
+parent_uid: 1075859e-4cef-e748-703e-ab5bb16b1e24
 resourcetype: Document
 title: 127hand1.pdf
 uid: 8c402690-261f-dfd1-3f60-65918d1f96ec
