--- a/content/resources/127hand2.md
+++ b/content/resources/127hand2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/b793a40f5eb0bc0fa88d31e42e783907_127hand2.pdf
 file_type: application/pdf
+parent_uid: 1075859e-4cef-e748-703e-ab5bb16b1e24
 resourcetype: Document
 title: 127hand2.pdf
 uid: b793a40f-5eb0-bc0f-a88d-31e42e783907
