--- a/content/resources/14127_lec11f_a_f.md
+++ b/content/resources/14127_lec11f_a_f.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/a4ace214c21174dd374a3339ebffe543_14127_lec11f_a_f.pdf
 file_type: application/pdf
+parent_uid: 1075859e-4cef-e748-703e-ab5bb16b1e24
 resourcetype: Document
 title: 14127_lec11f_a_f.pdf
 uid: a4ace214-c211-74dd-374a-3339ebffe543
