--- a/content/resources/14127_lec1_pt1.md
+++ b/content/resources/14127_lec1_pt1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This is the outline of the introductory lecture for this course.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/6b4a092f6157b19cae5af5904c555157_14127_lec1_pt1.pdf
 file_type: application/pdf
+parent_uid: 1075859e-4cef-e748-703e-ab5bb16b1e24
 resourcetype: Document
 title: 14127_lec1_pt1.pdf
 uid: 6b4a092f-6157-b19c-ae5a-f5904c555157
