--- a/content/resources/14127_lec2_pt2.md
+++ b/content/resources/14127_lec2_pt2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This is the outline for Lecture 2 of this course.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/4ac999385843e8212b7e717912496033_14127_lec2_pt2.pdf
 file_type: application/pdf
+parent_uid: 1075859e-4cef-e748-703e-ab5bb16b1e24
 resourcetype: Document
 title: 14127_lec2_pt2.pdf
 uid: 4ac99938-5843-e821-2b7e-717912496033
