--- a/content/resources/14_127_ps2.md
+++ b/content/resources/14_127_ps2.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/638d703729e505e5c6ac940b9d13cd24_14_127_ps2.pdf
 file_type: application/pdf
+parent_uid: 9d0aa708-904e-32ce-df48-fdaee682718c
 resourcetype: Document
 title: 14_127_ps2.pdf
 uid: 638d7037-29e5-05e5-c6ac-940b9d13cd24
