--- a/content/resources/14_127_ps2sol.md
+++ b/content/resources/14_127_ps2sol.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/20ce732f0723ec5e81bcd369fc45cb70_14_127_ps2sol.pdf
 file_type: application/pdf
+parent_uid: 9d0aa708-904e-32ce-df48-fdaee682718c
 resourcetype: Document
 title: 14_127_ps2sol.pdf
 uid: 20ce732f-0723-ec5e-81bc-d369fc45cb70
