--- a/content/resources/14_127ps3.md
+++ b/content/resources/14_127ps3.md
@@ -3,6 +3,7 @@ content_type: resource
 description: Problem set.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/791d8a0c77f088853a3cd85742a2e615_14_127ps3.pdf
 file_type: application/pdf
+parent_uid: 9d0aa708-904e-32ce-df48-fdaee682718c
 resourcetype: Document
 title: 14_127ps3.pdf
 uid: 791d8a0c-77f0-8885-3a3c-d85742a2e615
