--- a/content/resources/14_127ps3_sol.md
+++ b/content/resources/14_127ps3_sol.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/14-127-behavioral-economics-and-finance-spring-2004/0c5f441405e8c27aefe1cd2d7775e701_14_127ps3_sol.pdf
 file_type: application/pdf
+parent_uid: 9d0aa708-904e-32ce-df48-fdaee682718c
 resourcetype: Document
 title: 14_127ps3_sol.pdf
 uid: 0c5f4414-05e8-c27a-efe1-cd2d7775e701
